[package]
name = "math_lib_rust_alfa"
version = "0.1.0"
edition = "2024"
authors = ["alfatecnologia <lexander.alfa@gmail.com>"]
description = "A simple Rust math library with basic arithmetic operations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lexanderalfabiotec-cyber/math_lib_rust_alfa"
documentation = "https://docs.rs/math_lib_rust_alfa"
homepage = "https://github.com/lexanderalfabiotec-cyber/math_lib_rust_alfa"
keywords = ["math", "arithmetic", "operations", "library"]
categories = ["algorithms", "development-tools::procedural-macros"]
readme = "README.md"

[dependencies]
